--- a/index.html
+++ b/index.html
@@ -1,1 +1,258 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homepage</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    
+    <link rel="stylesheet" href="./css/font-awesome.min.css" />
+    
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-dark navbar-expand-lg py-0 fixed-top" id="network-navbar-top">
+      <div class="container py-2">
+        <a href="./index.html" class="navbar-brand d-flex align-items-center">
+            <svg
+  width="132"
+  viewBox="0 0 132 22"
+  fill="none"
+  xmlns="http://www.w3.org/2000/svg"
+>
+  
+  <path
+    d="M69.0874 4.90909V18H66.6967L61.0014 9.76065H60.9055V18H58.1378V4.90909H60.5668L66.2173 13.142H66.3324V4.90909H69.0874ZM75.7974 18.1918C74.7875 18.1918 73.9181 17.9872 73.1895 17.5781C72.465 17.1648 71.9068 16.581 71.5147 15.8267C71.1227 15.0682 70.9267 14.1712 70.9267 13.1357C70.9267 12.1257 71.1227 11.2393 71.5147 10.4766C71.9068 9.71378 72.4586 9.11932 73.1703 8.69318C73.8862 8.26705 74.7257 8.05398 75.6887 8.05398C76.3365 8.05398 76.9395 8.15838 77.4977 8.36719C78.0602 8.57173 78.5502 8.88068 78.9679 9.29403C79.3897 9.70739 79.7179 10.2273 79.9522 10.8537C80.1866 11.4759 80.3038 12.2045 80.3038 13.0398V13.7876H72.0133V12.1001H77.7406C77.7406 11.7081 77.6554 11.3608 77.4849 11.0582C77.3145 10.7557 77.0779 10.5192 76.7754 10.3487C76.4771 10.174 76.1298 10.0866 75.7335 10.0866C75.3201 10.0866 74.9537 10.1825 74.6341 10.3743C74.3187 10.5618 74.0716 10.8153 73.8926 11.1349C73.7136 11.4503 73.622 11.8018 73.6177 12.1896V13.794C73.6177 14.2798 73.7072 14.6996 73.8862 15.0533C74.0694 15.407 74.3272 15.6797 74.6596 15.8714C74.992 16.0632 75.3862 16.1591 75.8422 16.1591C76.1447 16.1591 76.4217 16.1165 76.6731 16.0312C76.9245 15.946 77.1397 15.8182 77.3187 15.6477C77.4977 15.4773 77.6341 15.2685 77.7278 15.0213L80.2463 15.1875C80.1184 15.7926 79.8564 16.321 79.4601 16.7727C79.068 17.2202 78.5609 17.5696 77.9387 17.821C77.3208 18.0682 76.6071 18.1918 75.7974 18.1918ZM87.3031 8.18182V10.2273H81.3904V8.18182H87.3031ZM82.7328 5.82955H85.4558V14.983C85.4558 15.2344 85.4941 15.4304 85.5708 15.571C85.6475 15.7074 85.7541 15.8033 85.8904 15.8587C86.0311 15.9141 86.193 15.9418 86.3762 15.9418C86.5041 15.9418 86.6319 15.9311 86.7598 15.9098C86.8876 15.8842 86.9856 15.8651 87.0538 15.8523L87.4821 17.8786C87.3457 17.9212 87.1539 17.9702 86.9068 18.0256C86.6596 18.0852 86.3592 18.1214 86.0055 18.1342C85.3493 18.1598 84.774 18.0724 84.2797 17.8722C83.7896 17.6719 83.4082 17.3608 83.1355 16.9389C82.8627 16.517 82.7285 15.9844 82.7328 15.3409V5.82955ZM91.0137 18L88.3418 8.18182H91.0968L92.6181 14.7784H92.7076L94.2928 8.18182H96.9966L98.6074 14.7401H98.6905L100.186 8.18182H102.935L100.269 18H97.3865L95.699 11.8253H95.5776L93.8901 18H91.0137ZM108.577 18.1918C107.585 18.1918 106.726 17.9808 106.001 17.5589C105.281 17.1328 104.725 16.5405 104.333 15.782C103.941 15.0192 103.745 14.1349 103.745 13.1293C103.745 12.1151 103.941 11.2287 104.333 10.4702C104.725 9.70739 105.281 9.11506 106.001 8.69318C106.726 8.26705 107.585 8.05398 108.577 8.05398C109.57 8.05398 110.427 8.26705 111.147 8.69318C111.871 9.11506 112.43 9.70739 112.822 10.4702C113.214 11.2287 113.41 12.1151 113.41 13.1293C113.41 14.1349 113.214 15.0192 112.822 15.782C112.43 16.5405 111.871 17.1328 111.147 17.5589C110.427 17.9808 109.57 18.1918 108.577 18.1918ZM108.59 16.0824C109.042 16.0824 109.419 15.9545 109.722 15.6989C110.024 15.4389 110.252 15.0852 110.406 14.6378C110.563 14.1903 110.642 13.6811 110.642 13.1101C110.642 12.5391 110.563 12.0298 110.406 11.5824C110.252 11.1349 110.024 10.7812 109.722 10.5213C109.419 10.2614 109.042 10.1314 108.59 10.1314C108.134 10.1314 107.751 10.2614 107.44 10.5213C107.133 10.7812 106.901 11.1349 106.743 11.5824C106.589 12.0298 106.513 12.5391 106.513 13.1101C106.513 13.6811 106.589 14.1903 106.743 14.6378C106.901 15.0852 107.133 15.4389 107.44 15.6989C107.751 15.9545 108.134 16.0824 108.59 16.0824ZM115.18 18V8.18182H117.82V9.89489H117.923C118.102 9.28551 118.402 8.82528 118.824 8.5142C119.246 8.19886 119.732 8.04119 120.281 8.04119C120.418 8.04119 120.565 8.04972 120.722 8.06676C120.88 8.08381 121.018 8.10724 121.138 8.13707V10.5533C121.01 10.5149 120.833 10.4808 120.607 10.451C120.381 10.4212 120.175 10.4062 119.987 10.4062C119.587 10.4062 119.229 10.4936 118.913 10.6683C118.602 10.8388 118.355 11.0774 118.172 11.3842C117.993 11.6911 117.903 12.0447 117.903 12.4453V18H115.18ZM125.013 15.1747L125.019 11.9084H125.416L128.561 8.18182H131.686L127.461 13.1165H126.816L125.013 15.1747ZM122.546 18V4.90909H125.269V18H122.546ZM128.682 18L125.793 13.7237L127.608 11.7997L131.872 18H128.682Z"
+    fill="white"
+  />
+  
+  <circle cx="11" cy="11" r="11" fill="#6875F5" />
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M35 0C28.9249 0 24 4.92487 24 11C24 17.0751 28.9249 22 35 22V0Z"
+    fill="#6875F5"
+  />
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M43 2C40.2386 2 38 6.02944 38 11C38 15.9706 40.2386 20 43 20V2Z"
+    fill="#6875F5"
+  />
+</svg>
+
+        </a>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link">What is Network</a>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Integrations</a>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link">About us</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+          </ul>
+        </div>
+        <div>
+          <a href="#" class="d-none d-sm-inline-block btn btn-outline-gradient bg-dark">Log In</a>
+          <a href="#" class="d-none d-sm-inline-block btn btn-gradient mr-3">Sign Up</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="modal"
+            aria-controls="network-navbar"
+            aria-expanded="false"
+            aria-label="toggle navigation"
+            data-target="#network-navbar"
+            id="network-navbar-toggler"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </div>
+    </nav>
+  </body>
+</html>
+
+<section class="hero py-6 bg-gradient" id="hero">
+  <div class="container text-center">
+    <div class="col-md-10 col-lg-8 offset-md-1 offset-lg-2">
+      <h1 class="pt-6 pb-4">Manage and Share Context Across Your Company</h1>
+      <p class="lead mb-5 text-muted">
+        Introducing Network, a purpose-built communication platform that brings
+        your team together. Stay informed, make decisions, and collaborate with
+        easy-to-use tools so you can focus on what really matters: your work.
+      </p>
+      <a href="#" class="btn btn-gradient d-inline-block mb-6">Sign Up</a>
+    </div>
+    <img
+      src="./img/Post-Threads -Decision-3-1.jpg"
+      class="img-fluid blured-img"
+      alt=""
+    />
+  </div>
+</section>
+<section id="services py-6" class="py-5 bg-dark">
+  <div class="container text-center">
+    <div class="col-md-10 col-lg-8 offset-md-1 offset-lg-2">
+      <h2>Bring focus and structure to your company</h2>
+      <p class="text-secondary">
+        Network gives your company a place to collaborate effectively, without
+        the stress of real-time messaging. Network organizes work across groups,
+        while encouraging focused discussion on specific subjects. Get things
+        done faster by spreading context, gathering feedback, and making
+        decisions.
+      </p>
+      <p class="text-secondary">
+        Your team's discussions are no longer scattershot, they're precisely
+        structured. This allows teams to take full advantage of asynchronous
+        communication and eliminate the hassles of context switching.
+      </p>
+      <div class="row">
+        <div class="col-md-10 offset-md-1">
+          <div class="mb-5 d-flex justify-content-between align-items-center">
+            <button class="btn btn-default">Give Updates</button>
+            <button class="btn btn-default">Take Polls</button>
+            <button class="btn btn-default">Get Feedback</button>
+            <button class="btn btn-default">Make Decisions</button>
+          </div>
+        </div>
+      </div>
+      <img src="./img/Post-Expand-1.png" class="img-fluid blured-img" alt="" />
+    </div>
+  </div>
+</section>
+
+<footer class="footer text-secondary bg-dark">
+    <div class="container pt-4">
+        <div class="row border-bottom border-secondary pt-5 border-top border-secondary">
+            <div class="col-lg-4 col-md-6">
+                <h2 class="mt-0"><svg
+  width="200"
+  viewBox="0 0 132 22"
+  fill="none"
+  xmlns="http://www.w3.org/2000/svg"
+>
+  
+  <path
+    d="M69.0874 4.90909V18H66.6967L61.0014 9.76065H60.9055V18H58.1378V4.90909H60.5668L66.2173 13.142H66.3324V4.90909H69.0874ZM75.7974 18.1918C74.7875 18.1918 73.9181 17.9872 73.1895 17.5781C72.465 17.1648 71.9068 16.581 71.5147 15.8267C71.1227 15.0682 70.9267 14.1712 70.9267 13.1357C70.9267 12.1257 71.1227 11.2393 71.5147 10.4766C71.9068 9.71378 72.4586 9.11932 73.1703 8.69318C73.8862 8.26705 74.7257 8.05398 75.6887 8.05398C76.3365 8.05398 76.9395 8.15838 77.4977 8.36719C78.0602 8.57173 78.5502 8.88068 78.9679 9.29403C79.3897 9.70739 79.7179 10.2273 79.9522 10.8537C80.1866 11.4759 80.3038 12.2045 80.3038 13.0398V13.7876H72.0133V12.1001H77.7406C77.7406 11.7081 77.6554 11.3608 77.4849 11.0582C77.3145 10.7557 77.0779 10.5192 76.7754 10.3487C76.4771 10.174 76.1298 10.0866 75.7335 10.0866C75.3201 10.0866 74.9537 10.1825 74.6341 10.3743C74.3187 10.5618 74.0716 10.8153 73.8926 11.1349C73.7136 11.4503 73.622 11.8018 73.6177 12.1896V13.794C73.6177 14.2798 73.7072 14.6996 73.8862 15.0533C74.0694 15.407 74.3272 15.6797 74.6596 15.8714C74.992 16.0632 75.3862 16.1591 75.8422 16.1591C76.1447 16.1591 76.4217 16.1165 76.6731 16.0312C76.9245 15.946 77.1397 15.8182 77.3187 15.6477C77.4977 15.4773 77.6341 15.2685 77.7278 15.0213L80.2463 15.1875C80.1184 15.7926 79.8564 16.321 79.4601 16.7727C79.068 17.2202 78.5609 17.5696 77.9387 17.821C77.3208 18.0682 76.6071 18.1918 75.7974 18.1918ZM87.3031 8.18182V10.2273H81.3904V8.18182H87.3031ZM82.7328 5.82955H85.4558V14.983C85.4558 15.2344 85.4941 15.4304 85.5708 15.571C85.6475 15.7074 85.7541 15.8033 85.8904 15.8587C86.0311 15.9141 86.193 15.9418 86.3762 15.9418C86.5041 15.9418 86.6319 15.9311 86.7598 15.9098C86.8876 15.8842 86.9856 15.8651 87.0538 15.8523L87.4821 17.8786C87.3457 17.9212 87.1539 17.9702 86.9068 18.0256C86.6596 18.0852 86.3592 18.1214 86.0055 18.1342C85.3493 18.1598 84.774 18.0724 84.2797 17.8722C83.7896 17.6719 83.4082 17.3608 83.1355 16.9389C82.8627 16.517 82.7285 15.9844 82.7328 15.3409V5.82955ZM91.0137 18L88.3418 8.18182H91.0968L92.6181 14.7784H92.7076L94.2928 8.18182H96.9966L98.6074 14.7401H98.6905L100.186 8.18182H102.935L100.269 18H97.3865L95.699 11.8253H95.5776L93.8901 18H91.0137ZM108.577 18.1918C107.585 18.1918 106.726 17.9808 106.001 17.5589C105.281 17.1328 104.725 16.5405 104.333 15.782C103.941 15.0192 103.745 14.1349 103.745 13.1293C103.745 12.1151 103.941 11.2287 104.333 10.4702C104.725 9.70739 105.281 9.11506 106.001 8.69318C106.726 8.26705 107.585 8.05398 108.577 8.05398C109.57 8.05398 110.427 8.26705 111.147 8.69318C111.871 9.11506 112.43 9.70739 112.822 10.4702C113.214 11.2287 113.41 12.1151 113.41 13.1293C113.41 14.1349 113.214 15.0192 112.822 15.782C112.43 16.5405 111.871 17.1328 111.147 17.5589C110.427 17.9808 109.57 18.1918 108.577 18.1918ZM108.59 16.0824C109.042 16.0824 109.419 15.9545 109.722 15.6989C110.024 15.4389 110.252 15.0852 110.406 14.6378C110.563 14.1903 110.642 13.6811 110.642 13.1101C110.642 12.5391 110.563 12.0298 110.406 11.5824C110.252 11.1349 110.024 10.7812 109.722 10.5213C109.419 10.2614 109.042 10.1314 108.59 10.1314C108.134 10.1314 107.751 10.2614 107.44 10.5213C107.133 10.7812 106.901 11.1349 106.743 11.5824C106.589 12.0298 106.513 12.5391 106.513 13.1101C106.513 13.6811 106.589 14.1903 106.743 14.6378C106.901 15.0852 107.133 15.4389 107.44 15.6989C107.751 15.9545 108.134 16.0824 108.59 16.0824ZM115.18 18V8.18182H117.82V9.89489H117.923C118.102 9.28551 118.402 8.82528 118.824 8.5142C119.246 8.19886 119.732 8.04119 120.281 8.04119C120.418 8.04119 120.565 8.04972 120.722 8.06676C120.88 8.08381 121.018 8.10724 121.138 8.13707V10.5533C121.01 10.5149 120.833 10.4808 120.607 10.451C120.381 10.4212 120.175 10.4062 119.987 10.4062C119.587 10.4062 119.229 10.4936 118.913 10.6683C118.602 10.8388 118.355 11.0774 118.172 11.3842C117.993 11.6911 117.903 12.0447 117.903 12.4453V18H115.18ZM125.013 15.1747L125.019 11.9084H125.416L128.561 8.18182H131.686L127.461 13.1165H126.816L125.013 15.1747ZM122.546 18V4.90909H125.269V18H122.546ZM128.682 18L125.793 13.7237L127.608 11.7997L131.872 18H128.682Z"
+    fill="white"
+  />
+  
+  <circle cx="11" cy="11" r="11" fill="#6875F5" />
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M35 0C28.9249 0 24 4.92487 24 11C24 17.0751 28.9249 22 35 22V0Z"
+    fill="#6875F5"
+  />
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M43 2C40.2386 2 38 6.02944 38 11C38 15.9706 40.2386 20 43 20V2Z"
+    fill="#6875F5"
+  />
+</svg>
+</h2>
+                <address>
+                    Wicherstr. 52,<br>
+                    10439 Berlin, Germany
+                </address>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h3 class="h5 text-white">Contact</h3>
+                <ul class="list-unstyled">
+                    <li>+49 221 25912509</li>
+                    <li>hello@dzemo.com</li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2 col-6">
+                <h3 class="h5 text-white">Company</h3>
+                <ul class="list-unstyled">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Engineering</a></li>
+                    <li><a href="#">Recruitment</a></li>
+                    <li><a href="#">Company</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2 col-6">
+                <h3 class="h5 text-white">Pages</h3>
+                <ul class="list-unstyled">
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Imprint</a></li>
+                    <li><a href="#">Projects</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row text-center justify-content-between py-4">
+            <div class="copyright text-sm-left col-sm-3">&copy; 2021, Network</div>
+            <ul class="list-inline mb-0 text-sm-right col-sm-9">
+                <li class="list-inline-item"><a href="#">Terms of Services</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+                <li class="list-inline-item"><a href="#">Twitter</a></li>
+                <li class="list-inline-item"><a href="#">Facebook</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+<div class="modal fade" id="network-navbar" tabindex="-1" role="dialog" aria-labelledby="network-navbar-toggler" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header align-items-center">
+          <h5 class="modal-title" id="exampleModalLabel"><svg
+  width="150"
+  viewBox="0 0 132 22"
+  fill="none"
+  xmlns="http://www.w3.org/2000/svg"
+>
+  
+  <circle cx="11" cy="11" r="11" fill="#6875F5" />
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M35 0C28.9249 0 24 4.92487 24 11C24 17.0751 28.9249 22 35 22V0Z"
+    fill="#6875F5"
+  />
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M43 2C40.2386 2 38 6.02944 38 11C38 15.9706 40.2386 20 43 20V2Z"
+    fill="#6875F5"
+  />
+</svg>
+</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <ul class="list-unstyled">
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Integration</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Pricing</a></li>
+            </ul>
+            <form action="./index.html" method="POST">
+                <div class="form-group">
+                    <label for="modal-email" class="sr-only">Email</label>
+                    <input type="email" name="modal-email" id="modal-email" placeholder="username@example.com" class="form-control form-control-lg">
+                </div>
+                <button type="submit" value="Join" class="btn btn-gradient btn-lg btn-block">Join</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="./js/index.js"></script>
+</body>
+</html>
