--- a/index.html
+++ b/index.html
@@ -116,15 +116,29 @@
       </p>
       <div class="row">
         <div class="col-md-10 offset-md-1">
-          <div class="mb-5 d-flex justify-content-between align-items-center">
-            <button class="btn btn-default">Give Updates</button>
-            <button class="btn btn-default">Take Polls</button>
-            <button class="btn btn-default">Get Feedback</button>
-            <button class="btn btn-default">Make Decisions</button>
+          <div class="mb-5 flex-wrap d-flex justify-content-between align-items-center">
+            <button class="btn btn-default mb-3">Give Updates</button>
+            <button class="btn btn-default mb-3">Take Polls</button>
+            <button class="btn btn-default mb-3">Get Feedback</button>
+            <button class="btn btn-default mb-3">Make Decisions</button>
           </div>
         </div>
       </div>
       <img src="./img/Post-Expand-1.png" class="img-fluid blured-img" alt="" />
+    </div>
+  </div>
+</section>
+<section id="post" class="bg-gradient py-6 overflow-hidden">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-5 mb-5">
+        <h2>Organically Create a Knowledge Base</h2>
+        <p>Network's posts encourage focused discussions on specific subjects. Unlike in messy chat apps, information naturally stays structured and on-topic. This makes it easy to search for information later.
+        </p>
+      </div>
+      <div class="col-lg-7">
+        <img src="./img/Network's-posts-encourage.png" class="img-fluid blured-img blured-img-green offscreen-right" alt="">
+      </div>
     </div>
   </div>
 </section>
